added pencils animation/ another page

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <nav>
         <h1 id="logo">مكتب النبراس الهندسي</h1>
         <ul>
-          <li><a href="#Home">الصفحه الرئيسيه </a></li>
-          <li><a href="#About"> عن الشركه</a></li>
-          <li><a href="#Contact">تواصل معنا</a></li>
+          <li><a href="#home">الصفحه الرئيسيه </a></li>
+          <li><a href="#about"> عن الشركه</a></li>
+          <li><a href="#contact">تواصل معنا</a></li>
         </ul>
       </nav>
     </header>
@@ -52,12 +52,22 @@
 
       <button>تواصل</button>
     </section>
-    <div class="about">
-      <h1>write the caption here</h1>
-      <h2>a nother thing idlk</h2>
-      <p>skiddadle skadoodle smthn</p>
-    </div>
-    <div class="contact"></div>
-    <div></div>
+    <section id="about">
+      <header class="about-head">
+        <h2>Lorem ipsum dolor sit amet,</h2>
+        <h3>
+          Lorem ipsum, dolor <br />Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Blanditiis qui atque debitis excepturi neque
+          explicabo mollitia
+        </h3>
+
+        <img
+          src="Images/pexels-miguel-á-padriñán-114119.png"
+          alt=""
+          class="pencil"
+        />
+        <div class="line-1"></div>
+      </header>
+    </section>
   </body>
 </html>
