--- a/index.html
+++ b/index.html
@@ -69,5 +69,7 @@
         <div class="line-1"></div>
       </header>
     </section>
+    <section id="contact"></section>
+    <footer><h2>Rami Mizyed</h2></footer>
   </body>
 </html>
