--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
       <button>تواصل</button>
     </section>
+    <div class="line-1"></div>
     <section id="about">
       <header class="about-head">
         <h2>Lorem ipsum dolor sit amet,</h2>
@@ -59,14 +60,12 @@
           Lorem ipsum, dolor <br />Lorem ipsum dolor sit amet consectetur,
           adipisicing elit. Blanditiis qui atque debitis excepturi neque
           explicabo mollitia
+          <img
+            src="Images/pexels-thirdman-5582867 (1).jpg"
+            alt=""
+            class="about-pic"
+          />
         </h3>
-
-        <img
-          src="Images/pexels-miguel-á-padriñán-114119.png"
-          alt=""
-          class="pencil"
-        />
-        <div class="line-1"></div>
       </header>
     </section>
     <section id="contact"></section>
