Some Color Changes and bug fixes
Fixed some bugs with the phone view and resizing.

--- a/index.html
+++ b/index.html
@@ -180,11 +180,9 @@
             </form>
           </div>
         </div>
-       
-
       </div>
-     
     </section>
+    <footer><h2><span> Asal Technologies/Rami Mizyed  </span> Ramallah/Palestine</h2></footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
