Pre_final_edits
last edits done with the addititon of the footer and some minor color changes

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
     <div class="line-1"></div>
     <section id="about">
       <header class="main-header1">
-        <h1  data-aos="fade-left"><span>Lorem, ipsum.</span> Lorem, ipsum.</h1>
-        <p  data-aos="fade-right">Lorem ipsum dolor sit amet consectetur.</p>
+        <h1  data-aos="fade-left"><span>للهندسه </span>عنوان</h1>
+        <p  data-aos="fade-right">خدمات هندسيه لكل انواع المشاريع و الابنيه</p>
       </header>
       <main class="container-about">
         <section class="card" data-aos="fade-right">
           <img src="Images/1.jpg" alt="" data-aos="fade-left" />
           <div>
-            <h3 data-aos="fade-left">Lorem, ipsum dolor.</h3>
-            <p data-aos="fade-right">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <h3 data-aos="fade-left">تخطيط معماري</h3>
+            <h3 data-aos="fade-right"> تخطيط جميع انواع المباني باحدث التقنيات والمعدات بايدي خبراء  </h3>
           </div>
         </section>
         <section class="card" data-aos="fade-left">
@@ -119,16 +119,16 @@
     </section>
     <section id="contact">
       <div class="contact">
-        <div class="content">
+        <div class="content" data-aos="zoom-out-down">
           <h2>Contact Us</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem vel ut facilis voluptas sequi aperiam officiis quisquam harum ab unde.</p>
         </div>
         <div class="container2">
-          <div class="contactinfo">
+          <div class="contactinfo" data-aos="zoom-in-left">
             <div class="box">
                <img src="SVG_icons/telephone.svg" alt="" class="icon">
               
-              <div class="text">
+              <div class="text" >
                 <h3>Phone</h3>
                 <p>903279756</p>
               </div>
@@ -150,7 +150,7 @@
               </div>
             </div>
           </div>
-          <div class="contactForm">
+          <div class="contactForm" data-aos="fade-right">
             <form action="">
               <h2>Send Message</h2>
               <div class="inputBox">
@@ -162,10 +162,6 @@
                 <span>Email</span>
               </div>
               <div class="inputBox">
-                <input type="text" required='required' >
-                <span>Full Name</span>
-              </div>
-              <div class="inputBox">
                 <input type="text" >
                 <span>Phone Number</span>
               </div>
@@ -174,7 +170,7 @@
                 <span>Message</span>
               </div>
               <div class="inputBox">
-                <input type="submit" name="" id="" value="send">
+                <input type="submit" name="" id="submit" value="Submit">
               </div>
               
             </form>
@@ -182,7 +178,7 @@
         </div>
       </div>
     </section>
-    <footer><h2><span> Asal Technologies/Rami Mizyed  </span> Ramallah/Palestine</h2></footer>
+    <footer><h2> Copyright © 2021 | Designed by Asal Technologies | Ramallah/Palestine <span> | by:"Rami Mizyed"</span></footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
